--- a/test/fixtures/expenses.yml
+++ b/test/fixtures/expenses.yml
@@ -6,6 +6,7 @@ expensive:
   expense_date: 2016-04-10
   expenses_in_euro: 123
   expense_list: Essensliste
+  user: Andi
 
 cheap:
   where: Aldi
@@ -13,3 +14,4 @@ cheap:
   expense_date: 2016-04-11
   expenses_in_euro: 32.0
   expense_list: Essensliste
+  user: Andi
